# cli

./: .gitignore  OAT.xml  README-EN.md  README.en.md  README.md
ACE_Tools/: .eslintignore  rollup.config.js
ACE_Tools/lib/: ace_tools.js
ACE_Tools/lib/src/cli/ace-check/: Info.js  checkJavaSdk.js  checkOhpm.js  index.js
ACE_Tools/lib/src/cli/ace-clean/: index.js
ACE_Tools/lib/src/cli/ace-devices/: index.js
ACE_Tools/lib/src/cli/ace-install/: index.js
ACE_Tools/lib/src/cli/ace-launch/: index.js
ACE_Tools/lib/src/cli/ace-log/: index.js
ACE_Tools/lib/src/cli/ace-run/: index.js
ACE_Tools/lib/src/cli/ace-test/: index.js
ACE_Tools/lib/src/cli/util/: index.js
ACE_Tools/templates/ios/etsapp/: AppDelegate.mm
ace-cli/: .eslintignore  README.md  package.json  rollup.config.js
ace-cli/src/ace-build/: ace-build.js  index.js
ace-cli/src/ace-build/ace-compiler/: index.js
ace-cli/src/ace-build/ace-packager/: index.js
ace-cli/src/ace-check/: checkDevices.js  checkJavaSdk.js  checkNodejs.js  getTool.js  index.js  util.js
ace-cli/src/ace-create/component/: index.js
ace-cli/src/ace-create/module/: index.js
ace-cli/src/ace-create/project/: index.js
ace-cli/src/ace-create/template/module_ohos/: build.gradle
ace-cli/src/ace-devices/: index.js
ace-cli/src/ace-install/: index.js
ace-cli/src/ace-log/: index.js
ace-cli/src/ace-run/: index.js
ace_tools/: package.json  rollup.config.js
ace_tools/lib/: ace_tools.js
ace_tools/lib/src/cli/ace-analysis/: createHtml.js  index.js  searchApi.js
ace_tools/templates/: arkui-x-config.json5  template.json
ace_tools/templates/android/: settings.gradle
ace_tools/templates/android/app/: build.gradle
ace_tools/templates/cpp/cpp_android/: CMakeLists.txt
ace_tools/templates/cpp/cpp_ios/: project.pbxproj
ace_tools/templates/cpp/cpp_src/: hello.cpp
ace_tools/templates/framework/MyFramework/: MyFramework.h
ace_tools/templates/framework/MyFramework.xcodeproj/: project.pbxproj
ace_tools/templates/ios/app/: AppDelegate_stage.m  EntryEntryAbilityViewController.m
ace_tools/templates/ios/app.xcodeproj/: project.pbxproj
ace_tools/templates/ios/etsapp/: AppDelegate.h
ace_tools/templates/ios/etsapp.xcodeproj/: project.pbxproj
ace_tools/templates/ohos_stage/: build-profile.json5
ace_tools/templates/ohos_stage/hvigor/: hvigor-config.json5
ace_tools/templates/share_library/: Index.ets  build-profile.json5  hvigorfile.ts  oh-package.json5
acetools/: package.json
cli/: .eslintrc  README.md  package.json  rollup.config.js
cli/src/ace-build/: ace-build.js  index.js
cli/src/ace-build/ace-compiler/: index.js
cli/src/ace-build/ace-packager/: adjustPbxproj4Framework.js  copyLibraryToProject.js  createTestTemFile.js  globalConfig.js  index.js  iospbxproj.js
cli/src/ace-check/: Ide.js  Info.js  Sdk.js  checkAppVersion.js  checkDevices.js  checkJavaSdk.js  checkNodejs.js  checkOhpm.js  configs.js  getTool.js  index.js  platform.js  util.js
cli/src/ace-clean/: index.js
cli/src/ace-config/: index.js
cli/src/ace-create/: util.js
cli/src/ace-create/aar/: index.js
cli/src/ace-create/ability/: index.js
cli/src/ace-create/component/: index.js
cli/src/ace-create/framework/: index.js
cli/src/ace-create/module/: index.js
cli/src/ace-create/project/: index.js
cli/src/ace-devices/: index.js
cli/src/ace-install/: index.js
cli/src/ace-launch/: index.js
cli/src/ace-log/: index.js
cli/src/ace-run/: index.js
cli/src/ace-test/: index.js
cli/src/ace-uninstall/: index.js
cli/src/util/: index.js
cli/templates/android/app/: build.gradle
cli/templates/app/ohos/: build.gradle  local.properties  package-lock.json  package.json
cli/templates/appv2/ohos/: build.gradle  local.properties  package-lock.json  package.json
cli/templates/cpp/cpp_android/: CMakeLists.txt
cli/templates/cpp/cpp_ios/: project.pbxproj
cli/templates/cpp/cpp_ohos/: CMakeLists.txt
cli/templates/cpp_ohos_fa/entry/: build-profile.json5  package.json
cli/templates/framework/MyFramework.xcodeproj/: project.pbxproj
cli/templates/ios/etsapp/: AppDelegate.mm  AppDelegate_stage.m  EntryMainAbilityViewController.h  EntryMainAbilityViewController.m  EntryMainViewController.h  EntryMainViewController.m
cli/templates/ios/etsapp.xcodeproj/: project.pbxproj
cli/templates/module_android/: build.gradle
cli/templates/module_ohos/: build-profile.json5  build.gradle  package.json
cli/templates/ohos_fa/: build-profile.json5  package.json
cli/templates/ohos_stage/: build-profile.json5  hvigorfile.ts  oh-package.json5  package.json
cli/templates/ohos_stage/AppScope/: app.json5
cli/templates/ohos_stage/hvigor/: hvigor-config.json5  hvigor-wrapper.js
(+236 files in other folders)
